--- a/kustomize/base/service.yaml
+++ b/kustomize/base/service.yaml
@@ -4,6 +4,8 @@ metadata:
   name: react-app
 spec:
   type: NodePort
+  selector:
+    app: react-app
   ports:
     - port: 80
       protocol: TCP
