--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
 
 images:
  - name: react-app
-   newName: houwayda/test
+   newName: houwayda/test:4762b854c85b974d5ff89417ef15be8fba16b6af
