--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
 
 
 images:
- - name: react-app
-   newName: houwayda/test:4762b854c85b974d5ff89417ef15be8fba16b6af
+ - name: houwayda/test
+   newTag: 4762b854c85b974d5ff89417ef15be8fba16b6af
