--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -4,5 +4,6 @@ resources:
 
 
 images:
- - name: houwayda/test
-   newTag: 4762b854c85b974d5ff89417ef15be8fba16b6af
+- name: "react-app"
+  newName: "docker.io/houwayda/test"
+  newTag: "4762b854c85b974d5ff89417ef15be8fba16b6af"
