--- a/kustomize/base/kustomization.yaml
+++ b/kustomize/base/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
 images:
 - name: "react-app"
   newName: "docker.io/houwayda/test"
-  newTag: "4762b854c85b974d5ff89417ef15be8fba16b6af"
+  newTag: 4762b854c85b974d5ff89417ef15be8fba16b6af
