--- a/kustomize/overlays/dev/images.yaml
+++ b/kustomize/overlays/dev/images.yaml
@@ -2,9 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: react-app
-images:
-- name: houwayda/test
-  newName: docker.io/houwayda/test
-  newTag: 8590be5c5f0bb3c9f0d726f921d1e460e715df29
+spec:
+ template:
+  spec:
+    containers:
+       images:
+     - name: houwayda/test
+    newName: docker.io/houwayda/test
+     newTag: 8590be5c5f0bb3c9f0d726f921d1e460e715df29
 
 
