--- a/kustomize/overlays/dev/kustomization.yaml
+++ b/kustomize/overlays/dev/kustomization.yaml
@@ -3,4 +3,8 @@ bases:
 
 patches:
 - path: replicas.yaml
-- path: images.yaml
+
+images:
+- name: houwayda/test
+  newName: docker.io/houwayda/test
+  newTag: 8590be5c5f0bb3c9f0d726f921d1e460e715df29
