--- a/kustomize/overlays/prod/kustomization.yaml
+++ b/kustomize/overlays/prod/kustomization.yaml
@@ -5,6 +5,6 @@ patches:
 - path: replicas.yaml
 
 images:
-- name: houwayda/prod
+- name: houwayda/test
   newName: docker.io/houwayda/prod
   newTag: fceef44bbb8bfcc8ba5fc50d4ed92ecac0699903
