--- a/kustomize/overlays/prod/kustomization.yaml
+++ b/kustomize/overlays/prod/kustomization.yaml
@@ -4,6 +4,9 @@ bases:
 patches:
 - path: replicas.yaml
 
+commonLabels:
+ env: prod
+
 images:
 - name: houwayda/test
   newName: docker.io/houwayda/prod
