--- a/kustomize/overlays/prod/kustomization.yaml
+++ b/kustomize/overlays/prod/kustomization.yaml
@@ -9,6 +9,9 @@ patches:
        - op: replace
          path: /spec/replicas
          value: 5
+       - op: add
+         path: /spec/matchLabels/app1
+         value: test
 
 commonLabels:
  env: production
